fix(cors): unrestricted CORS configuration for production
- Allow all origins using setAllowedOriginPatterns('*')
- Add PATCH HTTP method support
- Add Accept and Origin to allowed headers
- Add Content-Type to exposed headers
- Keep allowCredentials(true) for authenticated requests

This enables image upload functionality from any frontend domain.